--- a/views/match/match_damage.jade
+++ b/views/match/match_damage.jade
@@ -3,7 +3,7 @@ extend match
 block match_content
   .row
     .col-md-12
-      +data_table({id:"damage",summable:true, heading: "Damage", rankable: true})
+      +data_table({id:"damage", heading: "Damage", rankable: true})
         each player, i in match.players
           +data_table_header(i, match)
             tr
@@ -18,5 +18,8 @@ block match_content
                 span.img-text
                   img.img-sm(class=item.className src=item.img, title=item.name)
                   div.format #{item.val}
-            td
-              JSON.stringify(player.damage_inflictor_received_arr)
+            td.table-img
+              each item in player.damage_inflictor_received_arr || []
+                span.img-text
+                  img.img-sm(class=item.className src=item.img, title=item.name)
+                  div.format #{item.val}
